--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -1,5 +1,6 @@
 name: Makefile CI
-
+        
+          
 on:
   push:
     branches: [ "main" ]
@@ -12,6 +13,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - uses: Jimver/cuda-toolkit@v0.2.15
+      id: cuda-toolkit
+      with:
+        cuda: '12.4.1'
+    
+    - run: echo "Installed cuda version is:${{steps.cuda-toolkit.outputs.cuda}}"
+    
+    - run: echo "Cuda install location:${{steps.cuda-toolkit.outputs.CUDA_PATH}}"
+    
+    - run: nvcc -V
+    
     - uses: actions/checkout@v4
 
     - name: make
